--- a/app/views/sites/index.html.slim
+++ b/app/views/sites/index.html.slim
@@ -1,3 +1,7 @@
+ul.uk-breadcrumb
+  li
+    a=> link_to "Sites", root_path
+
 h1 Sites
 ul.uk-subnav.uk-subnav-pill
   li= link_to 'New site', new_site_path
