--- a/app/views/pages/_form.html.slim
+++ b/app/views/pages/_form.html.slim
@@ -1,27 +1,35 @@
 div.uk-form-large
   = form_for [page.site, page] do |f|
     div.uk-form-large
-      = f.label :active
+      => f.label :active
       = f.check_box :active
     br
     div.uk-form-large
-      = f.label :title, "Title of page:"
+      => f.label :title, "Title of page:"
       = f.text_field :title, placeholder: 'title of page'
     br
     div.uk-form-large
-      = f.label :url, "Url: #{@site.url}/ "
+      => f.label :url, "Url: #{@site.url}/ "
       = f.text_field :url, placeholder: 'about', class: "uk-form-width"
     br
     div.uk-form-large
-      = f.label :title, "Email: "
+      => f.label :title, "Email: "
       = f.text_field :email, placeholder: 'test@example.com', class: "uk-form-width"
     br
     div.uk-form-large
-      = f.label :title, "Basic auth login if needed: "
+      => f.label :title, "Screen size:"
+      = f.text_field :size, placeholder: '1280x1024', class: "uk-form-width"
+    br
+    div.uk-form-large
+      => f.label :title, "Device type:"
+      = f.select :device,  Computer: "computer", Phone: "phone", Tablet: "tablet"
+    br
+    div.uk-form-large
+      => f.label :title, "Basic auth login if needed:"
       = f.text_field :basic_auth, placeholder: 'htaccess user name', class: "uk-form-width"
     br
     div.uk-form-large
-      = f.label :title, "Basic auth password if needed: "
+      => f.label :title, "Basic auth password if needed: "
       = f.text_field :basic_password, placeholder: 'htaccess password', class: "uk-form-width"
     br
     div.actions.uk-form-large
