--- a/app/views/runs/index.html.slim
+++ b/app/views/runs/index.html.slim
@@ -9,35 +9,57 @@ ul.uk-breadcrumb
 h1 All runs for page: #{@page.title}
 h4 Url: #{@site.url}/#{@page.url}
 
-= @runs.total_count%5 == 0
-
-ul.uk-pagination.uk-pagination-left
-  div.uk-button-dropdown data-uk-dropdown="{mode:'click'}" aria-haspopup="true" aria-expanded="false"
-    button.uk-button 
-      |Per page
-      i.uk-icon-caret-down<
-    div.uk-dropdown aria-hidden="true"
-      ul.uk-nav.uk-nav-dropdown
-        - total = @runs.total_count/15
-        - total = total - 1 if @runs.total_count%5 == 0
-        - total.times do |t|
-          - num_per = (t+1)*15
-          li= link_to num_per, site_page_runs_path(per_page: num_per)
-        li= link_to 'all', site_page_runs_path(per_page: @runs.total_count)
-  - if @runs.total_pages > 1
-    - @runs.total_pages.times do |page|
-      - page = page + 1
-      - req_page = request.params['page'] ? request.params['page'].to_i : 1
-      - if page == req_page
-        li.uk-active= link_to page, site_page_runs_path(page: page, per_page: request.params['per_page'])
-      - else 
-        li= link_to page, site_page_runs_path(page: page, per_page: request.params['per_page'])
-
-- if @runs.size > 0
-  - @runs.each do |run|
-    = run.id
-    - if run.manual
-      p Manual Check
-    br
+- if @runs.total_count > 0
+  ul.uk-pagination.uk-pagination-left
+    div.uk-button-dropdown data-uk-dropdown="{mode:'click'}" aria-haspopup="true" aria-expanded="false"
+      button.uk-button 
+        |Per page
+        i.uk-icon-caret-down<
+      div.uk-dropdown aria-hidden="true"
+        ul.uk-nav.uk-nav-dropdown
+          - total = @runs.total_count/5
+          - total = total - 1 if @runs.total_count%5 == 0
+          - total.times do |t|
+            - num_per = (t+1)*5
+            - next if num_per > 20
+            li= link_to num_per, site_page_runs_path(per_page: num_per)
+          - if @runs.total_count < 15
+            li= link_to 'all', site_page_runs_path(per_page: @runs.total_count)
+    - if @runs.total_pages > 1
+      - @runs.total_pages.times do |page|
+        - page = page + 1
+        - req_page = request.params['page'] ? request.params['page'].to_i : 1
+        - if page == req_page
+          li.uk-active= link_to page, site_page_runs_path(page: page, per_page: request.params['per_page'])
+        - else 
+          li= link_to page, site_page_runs_path(page: page, per_page: request.params['per_page'])
+  table.uk-table.uk-table-striped
+    tr
+      th
+        |Ations
+      th
+        |Url
+      th 
+        |Screen size
+      th
+        |Device
+      th
+        |Create at
+      th 
+        |Type
+    - @runs.each do |run|
+      tr
+        td
+          = link_to run_path(page: @page, site: @site, id: run.id), method: :delete, data: { confirm: 'Are you sure?' }, class: 'uk-button-link' do
+            i.uk-icon-times
+        td= run.url
+        td= run.size
+        td= run.device
+        td= run.created_at
+        td
+          -if run.manual
+            |Manual check
+          -else
+            |Scheduled check
 - else
   p No run found for this page
