--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -40,11 +40,15 @@ ul.uk-pagination.uk-pagination-left
 table.uk-table.uk-table-striped
   tr
     th
-      |Ations
+      |Actions
     th
       |Page
     th
       |Active
+    th 
+      |Size
+    th
+      |Device
     th
       |
   - @pages.each do |site_page|
