--- a/app/views/runs/show.html.slim
+++ b/app/views/runs/show.html.slim
@@ -9,4 +9,4 @@ ul.uk-list.uk-list-space
   
 / = @har
 / = timeline [["Washington", "1789-04-29", "1797-03-03"],["Adams", "1797-02-03", "1801-03-03"],["Jefferson", "1801-03-03", "1809-03-03"]]
-= timeline pp @new_har
+= p @new_har
