--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,7 +3,7 @@ html
   head
     title Panel
     = csrf_meta_tags
-    link type="text/stylesheet" rel="stylesheet" href="/assets/application.css"
+    link type="text/css" rel="stylesheet" href="/assets/application.css"
 
   body
     nav.uk-navbar.uk-navbar-attached.uk-margin-bottom
