--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -73,6 +73,7 @@ table.uk-table.uk-table-striped
         button< data-uk-modal="{target:'#more-#{site_page.id}'}" class="uk-button" More info
         .uk-modal id="more-#{site_page.id}"
           .uk-modal-dialog
+            a.uk-modal-close.uk-close
             table.uk-table.uk-table-striped
               tr
                 th
