--- a/app/views/sites/_form.html.slim
+++ b/app/views/sites/_form.html.slim
@@ -1,7 +1,7 @@
 div.uk-form-large
   = form_for site do |f|
     div.uk-form-large
-      = f.label :active
+      div.uk-margin-small-top
       = f.check_box :active
     br
     div.uk-form-large
