--- a/app/views/sites/index.html.slim
+++ b/app/views/sites/index.html.slim
@@ -68,6 +68,7 @@ table.uk-table.uk-table-striped
         button< data-uk-modal="{target:'#more-#{site.id}'}" class="uk-button" More info
         .uk-modal id="more-#{site.id}"
           .uk-modal-dialog
+            a.uk-modal-close.uk-close
             table.uk-table.uk-table-striped
               tr
                 th
