--- a/app/views/admin/accounts/index.html.slim
+++ b/app/views/admin/accounts/index.html.slim
@@ -58,6 +58,7 @@ table.uk-table.uk-table-striped
           = link_to 'Unlock', admin_account_path(user, :user => {locked_at: '', failed_attempts: 0}), method: :patch, data: { confirm: 'Are you sure?' }, class: 'uk-button uk-button-danger'
         .uk-modal id="more-#{user.id}"
           .uk-modal-dialog
+            a.uk-modal-close.uk-close
             h2
               ul.uk-subnav
                 li= user.email
