--- a/app/views/runs/show.html.slim
+++ b/app/views/runs/show.html.slim
@@ -4,15 +4,10 @@ h1 Chart: #{@run.url}
 ul.uk-list.uk-list-space
   li.uk-list Device: #{@run.device}
   li.uk-list Screen size: #{@run.size}
-  
-ul.uk-pagination.uk-pagination-left
-  div.uk-button-dropdown data-uk-dropdown="{mode:'hover'}" aria-haspopup="true" aria-expanded="false"
-    button.uk-button
-      |Filter content type
-      i.uk-icon-caret-down<
-    div.uk-dropdown aria-hidden="true"
-      ul.uk-nav.uk-nav-dropdown
-        -@filter_type.each do |f_type|
-          li = link_to "#{f_type}", '#', data: { filter: f_type }
-          
+
+.navbar
+  ul.uk-navbar-nav
+    -@filter_type.each do |f_type|
+      li.uk-button> data={filter: f_type} #{f_type}
+
 #chart_area
