--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,8 @@ html
     nav.uk-navbar.uk-navbar-attached.uk-margin-bottom
       .uk-navbar-brand Panel
       ul.uk-navbar-nav
-        li= link_to 'Sites', root_path, class: "uk-button "
+        li= link_to 'Home', root_path, class: "uk-button "
+        li= link_to 'Sites', sites_path, class: "uk-button "
         - if user_admin?
           li= link_to 'Manage accounts', admin_accounts_path, class: "uk-button"
       ul.uk-navbar-nav.uk-navbar-flip
